# RAG

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  example.env  pyproject.toml  requirements.txt  settings.yaml
agents/: agent_manager.py  azure_openai_api.py  document_loader.py  main.py  text_splitter.py  tool_manager.py  vector_database.py
app/: __init__.py  __main__.py  constants.py  di.py  launcher.py  main.py  server.py
app/components/: azure_openai_api_manager.py  chroma_document_store.py  document_loader.py  document_splitter.py  document_store.py  ingest_manager.py  vector_db_manager.py  vector_store_component.py  weaviate.py
app/components/ingest/: ingest_component.py
app/server/chat/: chat_router.py  chat_service.py
app/settings/: __init__.py  settings.py  settings_loader.py  yaml_utils.py
