[tool.poetry]
name = "rag"
version = "0.1.0"
description = "Using LangChain and MongoDB for Retrieval-Augmented Generation with LLMs"
authors = ["Tiago Martins Speckart <tiagospeckart@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "3.11.*"
uvicorn = "^0.23.2"
pydantic = "<2"
fastapi = "^0.110.1"
langchain-openai = "^0.1.1"
openai = "^1.16.1"
langchain-community = "^0.0.31"
python-dotenv = "^1.0.1"
injector = "^0.21.0"
unstructured = "^0.13.2"
markdown = "^3.6"
langchain-text-splitters = "^0.0.1"
langchain-core = "^0.1.40"
nltk = "^3.8.1"


[tool.poetry.group.dev.dependencies]
langchain-cli = ">=0.0.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
